# SAGE_MA_Exploration

./: .gitignore  README.md
assets/: README.md
configs/: README.md
deployment/: README.md  env.example  requirements.txt
deployment/config/: online_exploration.yaml
deployment/config/scenarios/: office.yaml  tunnel.yaml
deployment/launch/: online_exploration.launch
deployment/operators/: README.md
deployment/scripts/: build_ros1_workspace.sh  run_online_exploration.sh
docs/: IMPLEMENTATION_NOTES.md  REVIEWER_NOTE.md
ros1_ws/src/sage_ma_exploration/: CMakeLists.txt  README.md  package.xml
ros1_ws/src/sage_ma_exploration/config/: operator_pipeline.yaml
ros1_ws/src/sage_ma_exploration/launch/: graph_sync.launch  graph_sync_swarm.launch  online_exploration.launch
ros1_ws/src/sage_ma_exploration/msg/: CellUpdate.msg  EdgeDelta.msg  GraphDelta.msg  Layer2Delta.msg  NodeDelta.msg  StateDigest.msg
ros1_ws/src/sage_ma_exploration/scripts/: operator_pipeline_node.py
scripts/: README.md
tests/: README.md
training/: README.md
training/gnn_marl_planner/: astar.py  goal_dispatch_mixin.py  goal_logic.py  graph_sync_ingest_mixin.py  model_inference_mixin.py  occupancy_to_graph.py  onnx_full_dynamic.py  onnx_shared_dynamic.py  parameters_gnn.txt  parameters_light_gnn.txt  parameters_lighter_gnn.txt  parameters_lighter_gnn_for_exp.txt  planner_metrics.py  plot_map.py  replan_scheduler.py  requirements.txt  runtime_map_mixin.py  test_merge.py  to_graph_sharing_odom.py  uav_index.py  viewpoint_ops_mixin.py
training/gnn_marl_planner/algorithms/: actor_critic_graph.py  onnx_act_graph.py  onnx_actor_critic_graph.py
training/gnn_marl_planner/configs/: config.py
training/gnn_marl_planner/map_utils/: map_processor.py  visualization.py
training/gnn_marl_planner/utils/: graph_buffer.py  separated_buffer.py
training/sim/: __main__.py  baseline.py  comm.py  config.py  crdt.py  explored_mask.py  gbplanner.py  gbplanner_system.py  gbplanner_uav.py  graph_state.py  metrics.py  planner.py  proposed.py  runner.py  sensor.py  uav.py  visualizer.py  world.py
training/sim/tests/: test_crdt.py  test_frontier.py  test_sensor.py  test_viewpoint.py
(+5 files in other folders)
