<?xml version="1.0"?>
<package format="2">
  <name>sage_ma_exploration</name>
  <version>0.1.0</version>
  <description>ROS interfaces and deployment templates for multi-agent exploration.</description>
  <maintainer email="maintainer@example.com">SAGE MA Exploration Maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
</package>

